--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   bake-latest:
-    runs-on: centos-latest
+    runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
