--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -13,6 +13,14 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Get Latest Duo Auth Proxy Version
+        id: getLatest
+        shell: pwsh
+        run: |
+          $DuoAuthProxySrc = Invoke-WebRequest -Method HEAD -Uri "https://dl.duosecurity.com/duoauthproxy-latest-src.tgz"
+          $DuoAuthProxySrc.Headers.'Content-Disposition'[0] -match '^attachment; filename=\"duoauthproxy-(.*)-src.tgz\"$'
+          $DuoAuthProxyLatestVersion = $Matches[1]
+          Write-Output "DuoLatestVersion=$($DuoAuthProxyLatestVersion)" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Set up QEMU
