--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -21,27 +21,32 @@ jobs:
           $DuoAuthProxySrc.Headers.'Content-Disposition'[0] -match '^attachment; filename=\"duoauthproxy-(.*)-src.tgz\"$'
           $DuoAuthProxyLatestVersion = $Matches[1]
           Write-Output "DuoLatestVersion=$($DuoAuthProxyLatestVersion)" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1.6.0
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1.10.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Docker/Dockerfile
-          push: true
-          tags: ghcr.io/tehmuffinmoo/duoauthproxy:latest
-          build-args: |
-            BUILD_COMMIT=${{ github.sha }}
-            BUILD_BRANCH=${{ github.ref_name }}
+          Write-Host $DuoAuthProxyLatestVersion
+      - name: Get Latest Package/Docker Container Version
+        run: |
+          manifest=$(curl -X GET https://docker.pkg.github.com/v2/TehMuffinMoo/duoauthproxy/latest/manifests/$GITHUB_SHA -u $GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }} | jq '.')
+          echo "{environment_variable_name}={$manifest}" >> "$GITHUB_ENV"
+#      - name: Checkout
+#        uses: actions/checkout@v2.3.4
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
+#          platforms: all
+#        with:
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1.6.0
+#      - name: Login to GitHub Container Registry
+#        uses: docker/login-action@v1.10.0
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Build
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Docker/Dockerfile
+#          push: true
+#          tags: ghcr.io/tehmuffinmoo/duoauthproxy:latest
+#          build-args: |
+#            BUILD_COMMIT=${{ github.sha }}
+#            BUILD_BRANCH=${{ github.ref_name }}
