--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Get Latest Package/Docker Container Version
         run: |
           manifest=$(curl -X GET https://docker.pkg.github.com/v2/TehMuffinMoo/duoauthproxy/latest/manifests/$GITHUB_SHA -u $GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }} | jq '.')
-          echo "{environment_variable_name}={$manifest}" >> "$GITHUB_ENV"
+          echo "manifest=$manifest" >> "$GITHUB_ENV"
 #      - name: Checkout
 #        uses: actions/checkout@v2.3.4
 #      - name: Set up QEMU
