--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -14,7 +14,7 @@ jobs:
       contents: read
     steps:
       - name: Get Latest Duo Auth Proxy Version
-        id: getLatest
+        id: getLatestDuoVersion
         shell: pwsh
         run: |
           $DuoAuthProxySrc = Invoke-WebRequest -Method HEAD -Uri "https://dl.duosecurity.com/duoauthproxy-latest-src.tgz"
@@ -22,18 +22,11 @@ jobs:
           $DuoAuthProxyLatestVersion = $Matches[1]
           Write-Output "DuoLatestVersion=$($DuoAuthProxyLatestVersion)" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
           Write-Host $DuoAuthProxyLatestVersion
-      - name: Set the value in bash
-        id: step_one
-        run: |
-          {
-            echo 'JSON_RESPONSE<<EOF'
-            curl https://example.com
-            echo EOF
-          } >> "$GITHUB_ENV"
       - name: Get Latest Package/Docker Container Version
+        id: getLatestPackageVersion
         run: |
           {
-            echo "manifest<<EOF"
+            echo 'manifest<<EOF'
             $(curl -X GET https://docker.pkg.github.com/v2/TehMuffinMoo/duoauthproxy/latest/manifests/$GITHUB_SHA -u $GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }} | jq '.')
             echo EOF
           } >> "$GITHUB_ENV"
