--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -32,25 +32,25 @@ jobs:
           } >> "$GITHUB_ENV"
       - name: Checkout
         uses: actions/checkout@v2.3.4
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v1
-#          platforms: all
-#        with:
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1.6.0
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v1.10.0
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#      - name: Build
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          file: ./Docker/Dockerfile
-#          push: true
-#          tags: ghcr.io/tehmuffinmoo/duoauthproxy:latest
-#          build-args: |
-#            BUILD_COMMIT=${{ github.sha }}
-#            BUILD_BRANCH=${{ github.ref_name }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+          platforms: all
+        with:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1.6.0
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1.10.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Docker/Dockerfile
+          push: true
+          tags: ghcr.io/tehmuffinmoo/duoauthproxy:latest, ghcr.io/tehmuffinmoo/duoauthproxy:{{ env.DuoLatestVersion }}
+          build-args: |
+            BUILD_COMMIT=${{ github.sha }}
+            BUILD_BRANCH=${{ github.ref_name }}
