--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -22,35 +22,35 @@ jobs:
           $DuoAuthProxyLatestVersion = $Matches[1]
           Write-Output "DuoLatestVersion=$($DuoAuthProxyLatestVersion)" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
           Write-Host $DuoAuthProxyLatestVersion
-      - name: Get Latest Package/Docker Container Version
-        id: getLatestPackageVersion
+      - name: Check if Tag exists
+        id: checkTagExists
         run: |
           {
-            echo 'manifest<<EOF'
-            curl -X GET https://ghcr.io/v2/TehMuffinMoo/duoauthproxy/manifests/$GITHUB_SHA -u $GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }} | jq '.'
+            echo 'tags<<EOF'
+            curl -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://ghcr.io/v2/tehmuffinmoo/duoauthproxy/tags/list
             echo EOF
           } >> "$GITHUB_ENV"
       - name: Checkout
         uses: actions/checkout@v2.3.4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1.6.0
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1.10.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Docker/Dockerfile
-          push: true
-          tags: ghcr.io/tehmuffinmoo/duoauthproxy:latest, ghcr.io/tehmuffinmoo/duoauthproxy:${{ env.DuoLatestVersion }}
-          build-args: |
-            BUILD_COMMIT=${{ github.sha }}
-            BUILD_BRANCH=${{ github.ref_name }}
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
+#        with:
+#          platforms: all
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1.6.0
+#      - name: Login to GitHub Container Registry
+#        uses: docker/login-action@v1.10.0
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Build
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          file: ./Docker/Dockerfile
+#          push: true
+#          tags: ghcr.io/tehmuffinmoo/duoauthproxy:latest, ghcr.io/tehmuffinmoo/duoauthproxy:${{ env.DuoLatestVersion }}
+#          build-args: |
+#            BUILD_COMMIT=${{ github.sha }}
+#            BUILD_BRANCH=${{ github.ref_name }}
