--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -45,6 +45,12 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DuoLatestVersion }}
+      - name: Something
+        id: something
+        shell: pwsh
+        run: |
+          echo "hello!"
+        if: contains("ghcr.io/tehmuffinmoo/duoauthproxy:${{ env.DuoLatestVersion }}:main", ${{ steps.meta.outputs.tags }})
 #      - name: Build
 #        uses: docker/build-push-action@v2
 #        with:
