--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -50,7 +50,7 @@ jobs:
         shell: pwsh
         run: |
           Write-Output "Meta=${{ steps.meta.outputs.tags }}" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
-        if: ${{ steps.meta.outputs.tags == "ghcr.io/tehmuffinmoo/duoauthproxy:"+env.DuoLatestVersion+":main" }}
+        if: ${{ steps.meta.outputs.tags }} == "ghcr.io/tehmuffinmoo/duoauthproxy:${{env.DuoLatestVersion}}:main"
         
 #      - name: Build
 #        uses: docker/build-push-action@v2
