--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -45,12 +45,16 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DuoLatestVersion }}
+      - name: Set Version
+        shell: pwsh
+        run: |
+          Write-Output "DuoLatestVersion=1.2.3" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
       - name: Something
         id: something
         shell: pwsh
         run: |
           Write-Output "Meta=${{ steps.meta.outputs.tags }}" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
-        if: steps.meta.outputs.tags == "ghcr.io/tehmuffinmoo/duoauthproxy:${{env.DuoLatestVersion0}}:main"
+        if: steps.meta.outputs.tags == "ghcr.io/tehmuffinmoo/duoauthproxy:${{env.DuoLatestVersion}}:main"
         
 #      - name: Build
 #        uses: docker/build-push-action@v2
