--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -41,11 +41,11 @@ jobs:
         uses: docker/setup-qemu-action@v1
         with:
           platforms: all
-        if: env.DuoLatestVersion == env.DuoPackageCurrentVersion
+        if: env.DuoLatestVersion > env.DuoPackageCurrentVersion
         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1.6.0
-        if: env.DuoLatestVersion == env.DuoPackageCurrentVersion
+        if: env.DuoLatestVersion > env.DuoPackageCurrentVersion
         
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1.10.0
@@ -53,7 +53,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-        if: env.DuoLatestVersion == env.DuoPackageCurrentVersion
+        if: env.DuoLatestVersion > env.DuoPackageCurrentVersion
         
       - name: Build Package
         uses: docker/build-push-action@v2
@@ -65,4 +65,4 @@ jobs:
           build-args: |
             BUILD_COMMIT=${{ github.sha }}
             BUILD_BRANCH=${{ github.ref_name }}
-        if: env.DuoLatestVersion == env.DuoPackageCurrentVersion
+        if: env.DuoLatestVersion > env.DuoPackageCurrentVersion
