--- a/.github/workflows/bake_latest.yml
+++ b/.github/workflows/bake_latest.yml
@@ -33,9 +33,16 @@ jobs:
           Write-Output "DuoPackageCurrentVersion=$($DuoAuthProxyPackageCurrentVersion)" | Out-File -FilePath $ENV:GITHUB_ENV -Encoding utf8 -Append
           Write-Host "Latest Duo Version: $($DuoAuthProxyLatestVersion)"
           Write-Host "Current Package Version: $($DuoAuthProxyPackageCurrentVersion)"
+
+          if ($($DuoAuthProxyLatestVersion) > $($DuoAuthProxyPackageCurrentVersion)) {
+            Write-Host "Found a newer version of Duo Auth Proxy. Building v$($DuoAuthProxyLatestVersion) now.."
+          } else {
+            Write-Host "Latest version already built."
+          }
           
       - name: Checkout
         uses: actions/checkout@v2.3.4
+        if: env.DuoLatestVersion > env.DuoPackageCurrentVersion
         
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
